--- a/dos33.html
+++ b/dos33.html
@@ -7911,7 +7911,7 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
 3FFB:A9 09          049             LDA #<span class='n'>9</span>                                          ; <a class='magic' name='_3FFC'>magic number</a> <span class='code'>LDA #CRENSA</span>
 3FFD:4C 85 33       050             JMP <a class="x" href="#ERRORA">ERRORA</a>      ;AND BACK
                     051 *****************************
-                    052 <a class="d" name="ENDP1"      >ENDP1       </a>EQU *-1         ; END OF DOS PATCHES FOR RELOCTR
+                    052 <a class="d" name="ENDP1"      >ENDP1       </a>EQU *-<span class='n'>1</span>         ; END OF DOS PATCHES FOR RELOCTR
                     053 <a class="d" name="ENDOFDOS"   >ENDOFDOS    </a>EQU *
 <hr>                    054     DO <a class="do" href="#ENDOFDOS">ENDOFDOS</a>-$4000                                       ; === Page <a class="page" name="page53">53</a> ===<span class="macro">
                     055         FAIL 2,'DOS LENGTH NOT CORRECT'                     </span>
