--- a/dos33.html
+++ b/dos33.html
@@ -495,6 +495,21 @@ var StickyHeaders = (function() {
 console.log( "Loading..." );
         StickyHeaders.Init( 'sticky' );
 console.log( "done!" );
+
+        var aFuncs = document.getElementsByClassName( 'f' );
+        var nFuncs = aFuncs.length;
+        var eFuncs = document.getElementsByName( 'stat_func' )[0];
+            eFuncs.innerHTML = nFuncs;
+
+        var aData  = document.getElementsByClassName( 'd' );
+        var nData  = aData.length;
+        var eData  = document.getElementsByName( 'stat_data' )[0];
+            eData.innerHTML = nData;
+
+        var aMagic = document.getElementsByClassName( 'magic' );
+        var nMagic = aMagic.length;
+        var eMagic = document.getElementsByName( 'statmagic' )[0];
+            eMagic.innerHTML = nMagic;
     }
 
     function onSyntaxChangeColor()
@@ -8014,12 +8029,12 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
 <h2><a class='section' name='Stats'>4.1 Statistics</a></h2>
 <p>
 <table class='borders'>
-    <tr><td>Total Spelling mistakes:             </td><td> 13</td></tr> <!-- :%s/\*spelling\*//gn -->
-    <tr><td>Total Functions:                     </td><td> 99</td></tr> <!-- :%s/class="f"//gn -->
-    <tr><td>Total Variables:                     </td><td>102</td></tr> <!-- :%s/class="d"//gn -->
-    <tr><td>Total Magic Numbers:                 </td><td> 38</td></tr>
-    <tr><td>Total Wasted bytes (run-time memory):</td><td>160</td></tr>
-    <tr><td>Total Wasted sectors:                </td><td> 14</td></tr>
+    <tr><td>Total Spelling mistakes:             </td><td name='statspell'> 36</td></tr> <!-- :%s/\*spelling\*//gn -->
+    <tr><td>Total Functions:                     </td><td name='stat_func'>  ?</td></tr> <!-- :%s/class="f"//gn -->
+    <tr><td>Total Variables:                     </td><td name='stat_data'>  ?</td></tr> <!-- :%s/class="d"//gn -->
+    <tr><td>Total Magic Numbers:                 </td><td name='statmagic'>  ?</td></tr>
+    <tr><td>Total Wasted bytes (run-time memory):</td><td                 >160</td></tr>
+    <tr><td>Total Wasted sectors:                </td><td                 > 14</td></tr>
 </table>
 <p>
 
