Add sticky headers for remaining Symbol headers, and divs for symbols

--- a/dos33.html
+++ b/dos33.html
@@ -7974,12 +7974,16 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
 <hr><hr><hr>
 </pre>
 
+<div class='sticky'>
 <h1><a class='section' name='Symbols'     >3.0 Symbols</a></h1>
+</div>
 
 <div class='sticky'>
 <h2><a class='section' name='Alphabetical'>3.1 Symbols (Alphabetical)</a></h2>
 </div>
-<pre>
+
+<div name='symbols_by_name'></div>
+
 <h3>A</h3>
     ASHM1       =   $73
     ASHM2       =   $6F
@@ -8058,15 +8062,16 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
 
 <h2><a class='section' name='Address'>3.2 Symbols (Address)</a></h2>
 
-<pre>
-</pre>
+<pre name='symbols_by_addr'></pre>
 
 
 <hr>
 
 
+<div class='sticky'>
 <h1>Miscellaneous Information</a>
 <h2><a class='section' name='Stats'>4.1 Statistics</a></h2>
+</div>
 <p>
 <table class='borders'>
     <tr><td>Total Spelling mistakes:             </td><td name='statspell'> 36</td></tr> <!-- :%s/\*spelling\*//gn -->
@@ -8085,7 +8090,9 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
 <p>
 
 
+<div class='sticky'>
 <h1><a class='section' name='ColorSrcFile'>4.2 Color-Coded Memory by Source File</a></h1>
+</div>
 <!--
     :%s/</\&lt;/g
     :%s/>/\&gt;/g
@@ -8127,7 +8134,10 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
 
 <img src="color_memory_usage_filename.png">
 
+
+<div class='sticky'>
 <h1><a class='section' name='ColorHexDump'>4.3 Color-Coded Hex Dump</a></h1>
+</div>
 <pre>
 1B00:<span class="c00">4C 84 1D A9 BF 85 41 A2</span> |L..)?.A"| <a class='ts' name='T0SA'>T0SA</a>, RELOCTR, $1B00 .. $1CFF, T0SA - T0SB
 1B08:<span class="c00">00 86 40 A0 00 A1 40 85</span> |..@ .!@.|
@@ -9327,7 +9337,9 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
 There are several locations where memory and disk space are wasted.
 <p>
 
+<div class='sticky'>
 <h2><a class='section' name='WastedMemory'>5.1 Wasted Memory</a></h2>
+</div>
 <p>
 I've annotated <a class='mem'>*wastes*</a> locations in the listing where memory is wasted.
 <p>
@@ -9401,7 +9413,10 @@ I've annotated <a class='mem'>*wastes*</a> locations in the listing where memory
 </div>
 <p>
 
+
+<div class='sticky'>
 <h2><a class='section' name='WastedDisk'>5.2 Wasted Disk Space</a></h2>
+</div>
 <p>
 There are <i>two</i> types of <b>data</b> that reside in both memory and on disk:
 <p>
@@ -9605,7 +9620,9 @@ DATA_END    EQU *           ; $2300
 In contradistinction to the previous example, our new code plus initialized data only takes up 100 bytes ($64) in memory; This is only <b>1 sector</b> on disk <i>even though it uses the same Total run-time memory data bytes as Example 1 !</i>
 <p>
 
+<div class='sticky'>
 <h2><a class='section' name='WastedSectors'>5.3 Wasted Sectors</a></h2>
+</div>
 <div style="padding-left:5%">
     <font style="font-family: monospace;">
         <table class='borders'>
@@ -9620,8 +9637,11 @@ In contradistinction to the previous example, our new code plus initialized data
 </div>
 <p>
 <b>Total sectors wasted</b>: 14 !
+
 <p>
+<div class='sticky'>
 <h2><a class='section' name='BufferBloat'>5.4 Buffer Bloat</a></h2>
+</div>
 <p>
 Why is DOS 3.3 so slow loading files when faster DOS's such as DiversiDOS, Pronto DOS, FastDOS, are able to load significantly faster?
 <p>
@@ -9737,7 +9757,9 @@ And the corresponding Track / Sector <b>disk map</b>
 
 
 
+<div class='sticky'>
 <h1><a class='section' name='Acknowledgements'>6.0 Acknowledgements</a></h1>
+</div>
 <p>
 A special Thank-You to:
 <ul>
