Make Func and Var styles global for use by span tag

--- a/dos33.html
+++ b/dos33.html
@@ -16,7 +16,7 @@ a {
     v VAR  reference       LDA Bar
     e EQU  const       Foo EQU 1
 */
-a.f { /* func name definition LABEL */
+.f { /* func name definition LABEL */
     color          : #46F  ; /* blue (baby blue) */
     text-decoration: none  ; /* remove underlink from func link */
     font-weight    : bold  ; /* default to bold for function names */
@@ -26,7 +26,7 @@ a.x { /* func name reference TARGET */
     text-decoration: none  ; /* remove underlink from data link */
     font-weight    : normal; /* remove bold */
 }
-a.d { /* var name definition LABEL*/
+.d { /* var name definition LABEL*/
     color          : #0C0  ; /* green */
     text-decoration: none  ; /* remove underlink from data link */
     font-weight    : bold  ; /* make bold */
